feat: add langgraph AI framework for agents and update env example

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 OPENAI_API_KEY=""
+AZURE_OPENAI_API_KEY=""
+GPT_DEPLOYMENT_NAME=""
+OPENAI_API_VERSION=""
 OPENWEATHERMAP_API_KEY=""
+AZURE_OPENAI_ENDPOINT=""
