--- a/requirements.txt
+++ b/requirements.txt
@@ -17,4 +17,6 @@ tiktoken==0.7.0
 langchain==0.3.10
 langchain-openai==0.2.2
 langchain-text-splitters==0.3.2
+langgraph==0.2.58
+langchain-community==0.3.10
 
