feat: add langchain and faiss with psycopg for postgres in  requirements.txt

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,24 @@
-OPENAI_API_KEY=""
-AZURE_OPENAI_API_KEY=""
-GPT_DEPLOYMENT_NAME=""
-OPENAI_API_VERSION=""
-OPENWEATHERMAP_API_KEY=""
-AZURE_OPENAI_ENDPOINT=""
+# Azure OpenAI Configuration
+AZURE_OPENAI_API_KEY="azure-openai-api-key"
+AZURE_OPENAI_ENDPOINT="https://resource.openai.azure.com/"
+GPT_DEPLOYMENT_NAME="gpt-4o-mini"
+OPENAI_API_VERSION="2024-02-15-preview"
+OPENAI_TEMPERATURE="0.5"
+EMBEDDING_DEPLOYMENT_NAME="mixedbread-ai/mxbai-embed-large-v1"
+
+# OpenWeatherMap API
+OPENWEATHERMAP_API_KEY="openweathermap-api-key"
+
+# PostgreSQL Database Configuration
+DB_HOST="localhost"
+DB_PORT="5432"
+DB_NAME="travel_advisor_db"
+DB_USER="postgres"
+DB_PASSWORD="db-password"
+
+# Agent Configuration
+AGENT_RECURSION_LIMIT="10"
+AGENT_MAX_RETRIES="3"
+
+# Logging
+LOG_LEVEL="INFO"
