--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,18 @@
 flask==3.1.0
-flask-login==0.6.3
-flask-wtf==1.2.1
-wtforms==3.1.2
 flask-cors==4.0.0
 gunicorn==23.0.0
-nltk==3.8.1
-ollama==0.4.4
-openai==1.45.0
-pyarrow==17.0.0
-pydantic==2.9.2
-pytest==7.4.0
+psycopg2-binary==2.9.9
 python-dotenv==1.0.1
 requests==2.31.0
-sentence_transformers==3.1.0
-tiktoken==0.7.0
 langchain==0.3.10
 langchain-openai==0.2.2
 langchain-text-splitters==0.3.2
-langgraph==0.2.58
 langchain-community==0.3.10
-
+langchain-huggingface==0.1.2
+langgraph==0.2.58
+sentence_transformers==3.1.0
+faiss-cpu==1.7.4
+huggingface_hub[hf_xet]
+openai==1.45.0
+tiktoken==0.7.0
+pydantic==2.9.2
