feat: add chat service and main entry point of flask app with constants and configs

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ AZURE_OPENAI_ENDPOINT="https://resource.openai.azure.com/"
 GPT_DEPLOYMENT_NAME="gpt-4o-mini"
 OPENAI_API_VERSION="2024-02-15-preview"
 OPENAI_TEMPERATURE="0.5"
-EMBEDDING_DEPLOYMENT_NAME="mixedbread-ai/mxbai-embed-large-v1"
+EMBEDDING_MODEL_NAME="mixedbread-ai/mxbai-embed-large-v1"
 
 # OpenWeatherMap API
 OPENWEATHERMAP_API_KEY="openweathermap-api-key"
