feat: update env example for tests

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,10 @@ AGENT_MAX_RETRIES="3"
 
 # Logging
 LOG_LEVEL="INFO"
+
+# Test Database Configuration
+
+TEST_DB_HOST="localhost"
+TEST_DB_USER="agent_user"
+TEST_DB_PASSWORD="agent_user"
+TEST_DB_NAME="test_travel_advisor_db"
